@@ -815,6 +815,56 @@ class ContextTests(test_utils.NDBTest):
     x = self.ctx.transaction(outer_callback).get_result()
     x.key.delete()
 
+  def testTransaction_OnCommit(self):
+    class Counter(model.Model):
+      count = model.IntegerProperty(default=0)
+    @model.transactional
+    def trans1(fail=False, bad=None):
+      tasklets.get_context().call_on_commit(lambda: log.append('A'))
+      c = key.get()
+      c.count += 1
+      c.put()
+      if bad is not None:
+        tasklets.get_context().call_on_commit(bad)
+      tasklets.get_context().call_on_commit(lambda: log.append('B'))
+      if fail:
+        raise model.Rollback
+    # Successful transaction.
+    key = Counter().put()
+    log = []
+    trans1()
+    self.assertEqual(key.get().count, 1)
+    self.assertEqual(log, ['A', 'B'])
+    # Failing transaction.
+    key = Counter().put()
+    log = []
+    trans1(fail=True)
+    self.assertEqual(key.get().count, 0)
+    self.assertEqual(log, [])
+    # Raising callable in transaction.
+    key = Counter().put()
+    log = []
+    self.assertRaises(ZeroDivisionError, trans1, bad=lambda: 1/0)
+    self.assertEqual(key.get().count, 1)
+    self.assertEqual(log, ['A'])
+    # Bad callable in transaction.
+    key = Counter().put()
+    log = []
+    self.assertRaises(TypeError, trans1, bad=42)
+    self.assertEqual(key.get().count, 1)
+    self.assertEqual(log, ['A'])
+    # No transaction.
+    log = []
+    tasklets.get_context().call_on_commit(lambda: log.append('C'))
+    self.assertEqual(log, ['C'])
+    # Raising callable outside transaction.
+    log = []
+    self.assertRaises(ZeroDivisionError,
+                      tasklets.get_context().call_on_commit, lambda: 1/0)
+    # Bad callable outside transaction.
+    log = []
+    self.assertRaises(TypeError, tasklets.get_context().call_on_commit, 42)
+
   def testDefaultContextTransaction(self):
     @tasklets.synctasklet
     def outer():
